Starting to work on the local database.

--- a/bpkg.conf
+++ b/bpkg.conf
@@ -9,5 +9,9 @@
 # "rm_extra":   Save space by removing examples and other
 #               files not necessary for normal usage.
 
-PKG_OPTIONS=("strip" "rm_docs" "rm_extras" "make_jobs")
-PKG_PREFIX="/usr"
+COMPILE_OPTS="-O3 -march=i686 -mcpu=i686 -pipe"
+INSTALL_OPTS=("strip" "rm_docs" "rm_extras" "make_jobs")
+INSTALL_PREFIX="/usr"
+
+# Database Options
+DB_ROOT="db"
