--- a/bpkg.conf
+++ b/bpkg.conf
@@ -1,4 +1,4 @@
 DB_ROOT="db"
+PKG_PREFIX="/usr"
 COMPILE_OPTS="-O3 -march=i686 -mcpu=i686 -pipe"
 INSTALL_OPTS=("strip" "rm_docs" "rm_extras" "make_jobs")
-INSTALL_PREFIX="/usr"
